# agno-whatsapp-starter

./: .env.example  CLAUDE.md  Dockerfile  README.md  compose.yaml  pyproject.toml  railway.json  requirements.txt
.github/workflows/: validate.yml
agents/: my_agent.py  prompts.py
agents/guardrails/: __init__.py  security.py
agents/hooks/: __init__.py  media.py
app/: config.yaml  interfaces.py  main.py
db/: __init__.py  schema.py  url.py
scripts/: entrypoint.sh  generate_requirements.sh  railway_up.sh
tests/: test_smoke.py
utils/: __init__.py  validate_envs.py
