[project]
name = "agentos-railway"
version = "1.0.0"
requires-python = ">=3.12,<4"
readme = "README.md"
license-files = ["LICENSE"]
authors = [{ name = "Agno", email = "hello@agno.com" }]

dependencies = [
  "agno[os]>=2.6.1,<2.7",
  "fastapi[standard]",
  "openai>=2.32,<3",
  "pgvector",
  "psycopg[binary]",
  "sqlalchemy",
  "mcp",
  "opentelemetry-api",
  "opentelemetry-sdk",
  "openinference-instrumentation-agno",
]

[project.optional-dependencies]
dev = ["mypy", "pytest", "ruff"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["agents*", "db*", "app*", "utils*"]

[tool.ruff]
line-length = 120
exclude = [".venv*"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.mypy]
check_untyped_defs = true
no_implicit_optional = true
warn_unused_configs = true
plugins = ["pydantic.mypy"]
exclude = [".venv*"]

[[tool.mypy.overrides]]
module = ["pgvector.*", "setuptools.*", "agno.*", "httpx.*", "mcp.*"]
ignore_missing_imports = true

[tool.uv.pip]
no-annotate = true
